--- a/html/sheet01/ex04/index.html
+++ b/html/sheet01/ex04/index.html
@@ -1,26 +1,52 @@
-Título principal que resume la idea general del escrito
-30 palabras de párrafo de bienvenida con texto lorem ipsum
-Primera idea principal a desarrollar en el escrito.
-30 palabras de párrafo que desarrolla la primera idea princ
-ipal y que tiene varios subtemas a desarrollar a continuaci
-ón.
-Primer subtema a desarrollar de la primera idea principal.
-30 palabras de párrafo que desarrolla el primer subtema de
-la primera idea principal.
-Segundo subtema a desarrollar de la primera idea principal.
-30 palabras de párrafo que desarrolla el segundo subtema de
-la primera idea principal.
-Segunda idea principal a desarrollar en el escrito.
-30 palabras de párrafo que desarrolla la segunda idea princ
-ipal y que tiene varios subtemas a desarrollar a continuaci
-ón.
-Primer subtema a desarrollar de la segunda idea principal.
-30 palabras de párrafo que desarrolla el primer subtema de
-la segunda idea principal.
-Segundo subtema a desarrollar de la primera idea principal.
-30 palabras de párrafo que desarrolla el segundo subtema de
-la segunda idea principal.
-Conclusiones
-Párrafo de 30 palabras con la síntesis de las ideas desarro
-lladas.
-Párrafo de 20 palabras de despedida.
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Etiquetas de encabezado</title>
+  </head>
+  <body>
+    <h1>Título principal que resume la idea general del escrito</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+    <h2>Primera idea principal a desarrollar en el escrito.</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+    <h3>Primer subtema a desarrollar de la primera idea principal.</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+    <h3>Segundo subtema a desarrollar de la primera idea principal.</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+    <h2>Segunda idea principal a desarrollar en el escrito.</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+    <h3>Primer subtema a desarrollar de la segunda idea principal.</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+    <h3>Segundo subtema a desarrollar de la primera idea principal.</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+
+    <h2>Conclusiones</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis euismod eleifend. Morbi venenatis sit amet eros ac sollicitudin.
+      Ut malesuada, magna eget venenatis rhoncus, ante mauris porttitor nulla, ac.
+    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis libero nec enim vehicula finibus. Fusce pulvinar luctus mi, eu.</p>
+  </body>
+</html>
