--- a/html/sheet01/ex08/index.html
+++ b/html/sheet01/ex08/index.html
@@ -1,40 +1,51 @@
-HTTP:
-El Protocolo de transferencia de hipertexto (en inglés: Hyp
-ertext Transfer Protocol o HTTP) es el protocolo de comunic
-ación que permite las transferencias de información en la W
-orld Wide Web.
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Lista de definiciones</title>
+  </head>
+  <body>
+    <dl>
+      <dt>HTTP:</dt>
+      <dd>
+        El Protocolo de transferencia de hipertexto (en inglés: Hypertext Transfer Protocol o HTTP) es el protocolo de comunicación que permite las
+        transferencias de información en la World Wide Web.
+      </dd>
 
-HTML:
-HTML, sigla en inglés de HyperText Markup Language, hace re
-ferencia al lenguaje de marcado para la elaboración de pági
-nas web.
+      <dt>HTML:</dt>
+      <dd>HTML, sigla en inglés de HyperText Markup Language, hace referencia al lenguaje de marcado para la elaboración de páginas web.</dd>
 
-URL:
-URL es una sigla del idioma inglés correspondiente a Unifor
-m Resource Locator (Localizador Uniforme de Recursos). Se t
-rata de la secuencia de caracteres que sigue un estándar y
-que permite denominar recursos dentro del entorno de Intern
-et para que puedan ser localizados.
-TCP/IP:
-TCP/IP son las siglas de Protocolo de Control de Transmisió
-n/Protocolo de Internet (en inglés Transmission Control Pro
-tocol/Internet Protocol), un sistema de protocolos que hace
-n posibles servicios Telnet, FTP, E-mail, y otros entre ord
-enadores que no pertenecen a la misma red.
-Internet:
-Internet (el internet o, también, la internet) es un conjun
-to descentralizado de redes de comunicación interconectadas
-que utilizan la familia de protocolos TCP/IP, lo cual garan
-tiza que las redes físicas heterogéneas que la componen, fo
-rmen una red lógica única de alcance mundial.
-W3C:
-El Consorcio WWW, en inglés: World Wide Web Consortium, es
-un consorcio internacional que genera recomendaciones y est
-ándares que aseguran el crecimiento de la World Wide Web a
-largo plazo.
-Mozilla Foundation:
-Fundación Mozilla es una organización sin ánimo de lucro de
-dicada a la creación de software libre. Tiene como misión
-«mantener la elección y la innovación en Internet». La fund
-ación es conocida por crear el navegador Mozilla Firefox o,
-simplemente Firefox en la actualidad.
+      <dt>URL:</dt>
+      <dd>
+        URL es una sigla del idioma inglés correspondiente a Uniform Resource Locator (Localizador Uniforme de Recursos). Se trata de la secuencia de
+        caracteres que sigue un estándar y que permite denominar recursos dentro del entorno de Internet para que puedan ser localizados.
+      </dd>
+
+      <dt>TCP/IP:</dt>
+      <dd>
+        TCP/IP son las siglas de Protocolo de Control de Transmisión/Protocolo de Internet (en inglés Transmission Control Protocol/Internet
+        Protocol), un sistema de protocolos que hacen posibles servicios Telnet, FTP, E-mail, y otros entre ordenadores que no pertenecen a la misma
+        red.
+      </dd>
+
+      <dt>Internet:</dt>
+      <dd>
+        Internet (el internet o, también, la internet) es un conjunto descentralizado de redes de comunicación interconectadas que utilizan la familia
+        de protocolos TCP/IP, lo cual garantiza que las redes físicas heterogéneas que la componen, formen una red lógica única de alcance mundial.
+      </dd>
+
+      <dt>W3C:</dt>
+      <dd>
+        El Consorcio WWW, en inglés: World Wide Web Consortium, esun consorcio internacional que genera recomendaciones y estándares que aseguran el
+        crecimiento de la World Wide Web a largo plazo.
+      </dd>
+
+      <dt>Mozilla Foundation:</dt>
+      <dd>
+        Fundación Mozilla es una organización sin ánimo de lucro dedicada a la creación de software libre. Tiene como misión «mantener la elección y
+        la innovación en Internet». La fundación es conocida por crear el navegador Mozilla Firefox o, simplemente Firefox en la actualidad.
+      </dd>
+    </dl>
+  </body>
+</html>
