--- a/html/sheet01/ex12/index.html
+++ b/html/sheet01/ex12/index.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf8">
-<title>Corrige los errores</title>
-</head>
-<body>
-<h1><strong>Corrige los errores</strong></h1>
-<h2>Índice de contenidos</h2>
-<ul>
-<li><a href="ancla">Enlace 1</a></li>
-<ul>
-<li><a href="#">Enlace 2</a></li>
-<li><a href="">Enlace 3</a></li>
-</ul>
-<li><a href=""></a>Enlace 4</li>
-</ul>
-<h2><p>Lorem ipsum dolor sit amet, consectetur adipisic
-ing elit. Dolorem at nostrum iure vitae veritatis officiis
-officia nam aperiam consequatur, dolor in unde beatae labor
-e quibusdam, nihil assumenda eligendi sint!<br><br>
-Maiores.</p></h2>
-<p id="#ancla">Lorem ipsum dolor sit amet, consectetur
-adipisicing elit. Ex mollitia quia, corporis dicta, eaque i
-taque.</p>
-</body>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <title>Corrige los errores</title>
+  </head>
+  <body>
+    <h1>Corrige los errores</h1>
+    <h2>Índice de contenidos</h2>
+    <ul>
+      <li><a href="./index.html#ancla1">Enlace 1</a></li>
+      <li><a href="./index.html#ancla2">Enlace 2</a></li>
+      <li><a href="./index.html#ancla3">Enlace 3</a></li>
+      <li><a href="./index.html#ancla4">Enlace 4</a></li>
+    </ul>
+    <p id="ancla1">Lorem ipsum dolor sit amet, consectetur adipisic ing elit.</p>
+    <p id="ancla2">
+      Dolorem at nostrum iure vitae veritatis officiis officia nam aperiam consequatur, dolor in unde beatae labor e quibusdam, nihil assumenda
+      eligendi sint!
+    </p>
+    <p id="ancla3">Maiores.</p>
+    <p id="ancla4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex mollitia quia, corporis dicta, eaque i taque.</p>
+  </body>
 </html>
