--- a/css/sheet01/ex04/index.html
+++ b/css/sheet01/ex04/index.html
@@ -1,18 +1,20 @@
- <!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 4</title>
-<style>
-    div {
-     border: 2px solid red;
-     }
-</style>
-</head>
-<body>
-<div>Este es un div.</div>
-<div>Este es otro div.</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 4</title>
+    <style>
+      div {
+        border: 2px solid red;
+      }
+    </style>
+  </head>
+  <body>
+    <div>Este es un div.</div>
+    <div>Este es otro div.</div>
+  </body>
 </html>
