--- a/css/sheet01/ex06/index.html
+++ b/css/sheet01/ex06/index.html
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 6</title>
-<style>
-    .container > * {
-    padding: 15px;
-    }
-</style>
-</head>
-<body>
-<div class="container">
-<p>Este es un párrafo dentro de un contenedor.</p>
-<div>Este es un div dentro de un contenedor.</div>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 6</title>
+    <style>
+      .container > * {
+        padding: 15px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <p>Este es un párrafo dentro de un contenedor.</p>
+      <div>Este es un div dentro de un contenedor.</div>
+    </div>
+  </body>
 </html>
