fix: add correct css styling

--- a/css/sheet01/ex07/index.html
+++ b/css/sheet01/ex07/index.html
@@ -6,7 +6,9 @@
 ial-scale=1.0">
 <title>Ejercicio 7</title>
 <style>
-/* Aquí van tus estilos CSS */
+    body {
+    background-color: #abc123;
+    }
 </style>
 </head>
 <body>
