--- a/css/sheet01/ex07/index.html
+++ b/css/sheet01/ex07/index.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 7</title>
-<style>
-    body {
-    background-color: #abc123;
-    }
-</style>
-</head>
-<body>
-<p>Este es un párrafo con un fondo de color en el body.
-</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 7</title>
+    <style>
+      body {
+        background-color: #abc123;
+      }
+    </style>
+  </head>
+  <body>
+    <p>Este es un párrafo con un fondo de color en el body.</p>
+  </body>
 </html>
