--- a/css/sheet01/ex09/index.html
+++ b/css/sheet01/ex09/index.html
@@ -6,7 +6,9 @@
 ial-scale=1.0">
 <title>Ejercicio 9</title>
 <style>
-/* Aquí van tus estilos CSS */
+    * {
+    font-family: Arial;
+    }
 </style>
 </head>
 <body>
