style: format with prettier

--- a/css/sheet01/ex10/index.html
+++ b/css/sheet01/ex10/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 10</title>
-<style>
-    p {
-    line-height: 1.6rem;
-    }
-</style>
-</head>
-<body>
-<p>Este es un párrafo con interlineado ajustado.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 10</title>
+    <style>
+      p {
+        line-height: 1.6rem;
+      }
+    </style>
+  </head>
+  <body>
+    <p>Este es un párrafo con interlineado ajustado.</p>
+  </body>
 </html>
