--- a/css/sheet01/ex11/index.html
+++ b/css/sheet01/ex11/index.html
@@ -6,7 +6,9 @@
 ial-scale=1.0">
 <title>Ejercicio 11</title>
 <style>
-/* Aquí van tus estilos CSS */
+    h1,h2,h3,h4,h5,h6 {
+      font-style: italic;
+    }
 </style>
 </head>
 <body>
