--- a/css/sheet01/ex12/index.html
+++ b/css/sheet01/ex12/index.html
@@ -6,7 +6,11 @@
 ial-scale=1.0">
 <title>Ejercicio 12</title>
 <style>
-/* Aquí van tus estilos CSS */
+    .fixed-element {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    }
 </style>
 </head>
 <body>
