fix: add correct css styling

--- a/css/sheet01/ex14/index.html
+++ b/css/sheet01/ex14/index.html
@@ -6,7 +6,11 @@
 ial-scale=1.0">
 <title>Ejercicio 14</title>
 <style>
-/* Aquí van tus estilos CSS */
+    .flex-container {
+    display: flex;
+    justify-content: space-between;
+    }
+
 </style>
 </head>
 <body>
