--- a/css/sheet01/ex15/index.html
+++ b/css/sheet01/ex15/index.html
@@ -6,7 +6,12 @@
 ial-scale=1.0">
 <title>Ejercicio 15</title>
 <style>
-/* Aquí van tus estilos CSS */
+    .center-item {
+    height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    }
 </style>
 </head>
 <body>
