style: format with prettier

--- a/css/sheet01/ex15/index.html
+++ b/css/sheet01/ex15/index.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 15</title>
-<style>
-    .center-item {
-    height: 100vh;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    }
-</style>
-</head>
-<body>
-<div class="flex-container">
-<div class="center-item">Elemento centrado</div>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 15</title>
+    <style>
+      .center-item {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="flex-container">
+      <div class="center-item">Elemento centrado</div>
+    </div>
+  </body>
 </html>
