fix: add correct css styling

--- a/css/sheet01/ex16/index.html
+++ b/css/sheet01/ex16/index.html
@@ -6,7 +6,11 @@
 ial-scale=1.0">
 <title>Ejercicio 16</title>
 <style>
-/* Aquí van tus estilos CSS */
+    .grid-container {
+    display:grid;
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 200px 200px 200px;
+    }
 </style>
 </head>
 <body>
