--- a/css/sheet01/ex17/index.html
+++ b/css/sheet01/ex17/index.html
@@ -6,7 +6,13 @@
 ial-scale=1.0">
 <title>Ejercicio 17</title>
 <style>
-/* Aquí van tus estilos CSS */
+    .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 100px);
+    }
+    .grid-item {
+    grid-column: 1 / 3 ;
+    }
 </style>
 </head>
 <body>
