fix: add correct css styling

--- a/css/sheet01/ex18/index.html
+++ b/css/sheet01/ex18/index.html
@@ -6,7 +6,9 @@
 ial-scale=1.0">
 <title>Ejercicio 18</title>
 <style>
-/* Aquí van tus estilos CSS */
+    a:hover {
+    color: red;
+    }
 </style>
 </head>
 <body>
