style: format with prettier

--- a/css/sheet01/ex19/index.html
+++ b/css/sheet01/ex19/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 19</title>
-<style>
-    p::before {
-    content: "(el contenido) "
-    }
-</style>
-</head>
-<body>
-<p>Este es un párrafo con contenido antes.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 19</title>
+    <style>
+      p::before {
+        content: '(el contenido) ';
+      }
+    </style>
+  </head>
+  <body>
+    <p>Este es un párrafo con contenido antes.</p>
+  </body>
 </html>
