fix: add correct css styling

--- a/css/sheet01/ex21/index.html
+++ b/css/sheet01/ex21/index.html
@@ -6,8 +6,17 @@
 ial-scale=1.0">
 <title>Ejercicio 21</title>
 <style>
-/* Aquí van tus estilos CSS */
+    button {
+    height: 200px;
+    width: 200px;
+    transition: all 0.5s;
+    }
+    button:hover {
+    background-color: red;
+    }
 </style>
 </head>
 <body>
 <button>Botón</button>
+</body>
+</html>
