--- a/css/sheet01/ex21/index.html
+++ b/css/sheet01/ex21/index.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 21</title>
-<style>
-    button {
-    height: 200px;
-    width: 200px;
-    transition: all 0.5s;
-    }
-    button:hover {
-    background-color: red;
-    }
-</style>
-</head>
-<body>
-<button>Botón</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 21</title>
+    <style>
+      button {
+        height: 200px;
+        width: 200px;
+        transition: all 0.5s;
+      }
+      button:hover {
+        background-color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <button>Botón</button>
+  </body>
 </html>
