--- a/css/sheet01/ex22/index.html
+++ b/css/sheet01/ex22/index.html
@@ -6,7 +6,25 @@
 ial-scale=1.0">
 <title>Ejercicio 22</title>
 <style>
-/* Aquí van tus estilos CSS */
+    .animate-box {
+    border: 2px solid red;
+    top: 50%;
+    position: absolute;
+    animation: linear infinite;
+    animation-name: move;
+    animation-duration: 5s;
+    }
+    @keyframes move {
+    0% {
+    left: 0;
+    }
+    50% {
+    left: 90%;
+    }
+    100% {
+    left: 0;
+    }
+    }
 </style>
 </head>
 <body>
