style: format with prettier

--- a/css/sheet01/ex22/index.html
+++ b/css/sheet01/ex22/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
-<title>Ejercicio 22</title>
-<style>
-    .animate-box {
-    border: 2px solid red;
-    top: 50%;
-    position: absolute;
-    animation: linear infinite;
-    animation-name: move;
-    animation-duration: 5s;
-    }
-    @keyframes move {
-    0% {
-    left: 0;
-    }
-    50% {
-    left: 90%;
-    }
-    100% {
-    left: 0;
-    }
-    }
-</style>
-</head>
-<body>
-<div class="animate-box">Cuadro animado</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, init
+ial-scale=1.0" />
+    <title>Ejercicio 22</title>
+    <style>
+      .animate-box {
+        border: 2px solid red;
+        top: 50%;
+        position: absolute;
+        animation: linear infinite;
+        animation-name: move;
+        animation-duration: 5s;
+      }
+      @keyframes move {
+        0% {
+          left: 0;
+        }
+        50% {
+          left: 90%;
+        }
+        100% {
+          left: 0;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="animate-box">Cuadro animado</div>
+  </body>
 </html>
