--- a/css/sheet02/ex01/index.html
+++ b/css/sheet02/ex01/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style.css" rel="stylesheet" />
     <title>Wireframe</title>
   </head>
   <body>
     <header>
-      <h1>TRADE</h1>
-      <nav>
+      <h1><strong>TRADE</strong></h1>
+      <nav id="header-nav-list">
         <a href="">Link 1</a>
         <a href="">Link 2</a>
         <a href="">Link 3</a>
@@ -17,8 +18,8 @@
       </nav>
     </header>
     <main>
-      <article>
-        <h1>Ready to get started?</h1>
+      <article id="free-trial">
+        <h2><strong>Ready to get started?</strong></h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur<br />
           adipiscing elit, sed do eiusmod tempor <br />
@@ -27,88 +28,95 @@
         <button>Start free trial</button>
       </article>
 
-      <article>
-        <section>
-          <h2>Your Best Value Proposition</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <article id="value-proposition-parent">
+        <section id="value-proposition">
+          <p><strong>Your Best Value Proposition</strong></p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam.
+          </p>
         </section>
 
-        <section>
-          <article>
-            <img src="" alt="" />
-            <p>
-              Lorem ipsum dolor sit amet, <br />
-              consectetur adipiscing elit
-            </p>
-            <p><a href="">Learn More</a></p>
-          </article>
-        </section>
+        <div id="propositions">
+          <section>
+            <article>
+              <img class="black_square" src="https://static.vecteezy.com/system/resources/thumbnails/000/370/700/small/Black_BG_1-01.png" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit
+              </p>
+              <p><a class="learn-more" href="">Learn More</a></p>
+            </article>
+          </section>
 
-        <section>
-          <article>
-            <img src="" alt="" />
-            <p>
-              Lorem ipsum dolor sit amet, <br />
-              consectetur adipiscing elit
-            </p>
-            <p><a href="">Learn More</a></p>
-          </article>
-        </section>
+          <section>
+            <article>
+              <img class="black_square" src="https://static.vecteezy.com/system/resources/thumbnails/000/370/700/small/Black_BG_1-01.png" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit
+              </p>
+              <p><a class="learn-more" href="">Learn More</a></p>
+            </article>
+          </section>
 
-        <section>
-          <article>
-            <img src="" alt="" />
-            <p>
-              Lorem ipsum dolor sit amet, <br />
-              consectetur adipiscing elit
-            </p>
-            <p><a href="">Learn More</a></p>
-          </article>
-        </section>
+          <section>
+            <article>
+              <img class="black_square" src="https://static.vecteezy.com/system/resources/thumbnails/000/370/700/small/Black_BG_1-01.png" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit
+              </p>
+              <p><a class="learn-more" href="">Learn More</a></p>
+            </article>
+          </section>
+        </div>
       </article>
     </main>
 
     <footer>
       <section>
-        <h1>TRADE</h1>
+        <h4><strong>TRADE</strong></h4>
         <p>&copy; 2010 - 2020</p>
         <a href="">Privacy - Terms</a>
       </section>
-      <section>
-        <h3>Products</h3>
-        <nav>
-          <a href="">Product</a>
-          <a href="">Product</a>
-          <a href="">Product</a>
-        </nav>
-      </section>
+      <div id="footer-nav">
+        <section>
+          <p><strong>Products</strong></p>
+          <nav class="footer-nav-list">
+            <a href="">Product</a>
+            <a href="">Product</a>
+            <a href="">Product</a>
+          </nav>
+        </section>
 
-      <section>
-        <h3>Features</h3>
-        <nav>
-          <a href="">Feature</a>
-          <a href="">Feature</a>
-          <a href="">Feature</a>
-        </nav>
-      </section>
+        <section>
+          <p><strong>Features</strong></p>
+          <nav class="footer-nav-list">
+            <a href="">Feature</a>
+            <a href="">Feature</a>
+            <a href="">Feature</a>
+          </nav>
+        </section>
 
-      <section>
-        <h3>Resources</h3>
-        <nav>
-          <a href="">Resource</a>
-          <a href="">Resource</a>
-          <a href="">Resource</a>
-        </nav>
-      </section>
+        <section>
+          <p><strong>Resources</strong></p>
+          <nav class="footer-nav-list">
+            <a href="">Resource</a>
+            <a href="">Resource</a>
+            <a href="">Resource</a>
+          </nav>
+        </section>
 
-      <section>
-        <h3>Company</h3>
-        <nav>
-          <a href="">Company</a>
-          <a href="">Company</a>
-          <a href="">Company</a>
-        </nav>
-      </section>
+        <section>
+          <p><strong>Company</strong></p>
+          <nav class="footer-nav-list">
+            <a href="">Company</a>
+            <a href="">Company</a>
+            <a href="">Company</a>
+          </nav>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
