--- a/css/sheet02/ex01/index.html
+++ b/css/sheet02/ex01/index.html
@@ -19,18 +19,16 @@
     </header>
     <main>
       <article id="free-trial">
-        <h2><strong>Ready to get started?</strong></h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur<br />
-          adipiscing elit, sed do eiusmod tempor <br />
-          incididunt ut labore et dolore magna aliqua.
-        </p>
-        <button>Start free trial</button>
+        <div id="free-trial-container">
+          <h2><strong>Ready to get started?</strong></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <button>Start free trial</button>
+        </div>
       </article>
 
       <article id="value-proposition-parent">
         <section id="value-proposition">
-          <p><strong>Your Best Value Proposition</strong></p>
+          <h2><strong>Your Best Value Proposition</strong></h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam.
